crates/ruff_linter/src/rules/isort/snapshots/ruff_linter__rules__isort__tests__length_sort.py.snap
---
source: crates/ruff_linter/src/rules/isort/mod.rs
---
length_sort.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / import mediuuuuuum
2 | | import short
3 | | import looooooooooooooooong
4 | | from looooooooooooooong import a
5 | | from mediuuuum import c
6 | | from short import b
  |
  = help: Organize imports

ℹ Fix
  1 |+import short
1 2 | import mediuuuuuum
2   |-import short
3 3 | import looooooooooooooooong
4   |-from looooooooooooooong import a
  4 |+from short import b
5 5 | from mediuuuum import c
6   |-from short import b
  6 |+from looooooooooooooong import a


